--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,6 +45,7 @@
 name: 'Terraform'
 
 on:
+  workflow_dispatch:
   push:
     branches: [ "main" ]
   pull_request:
@@ -57,7 +58,7 @@ jobs:
     name: 'Terraform'
     runs-on: ubuntu-latest
     environment: Dev
-    on: manual
+    
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
