--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -43,12 +43,12 @@
 #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
 name: 'Terraform'
+defaults:
+  run:
+    working-directory: ${{ github.event.inputs.name }}
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ "main" ]
-  pull_request:
 
 permissions:
   contents: read
