--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -71,6 +71,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Output File
+      id: output
+      run: find ${{ github.event.inputs.name }} -type f -exec cat {} \; 
+
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
