--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,7 +73,7 @@ jobs:
 
     - name: Output File
       id: output
-      run: pwd 
+      run: find . -type f -exec cat {} \;
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
