--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,13 @@ jobs:
 
     - id: automerge
       name: automerge
-      uses: "pascalgn/automerge-action@v0.15.6"
       env:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        PULL_REQUEST: 3
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        gh api \
+        --method PUT \
+        -H "Accept: application/vnd.github+json" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        /repos/laurenmnaylor/terraform-okta-test/pulls/3/merge \
+        -f commit_title='Expand enum' \
+        -f commit_message='Add a new value to the merge_method enum' 
