--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,9 +47,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         gh api \
-        --method PUT \
+        --method POST \
         -H "Accept: application/vnd.github+json" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
-        /repos/laurenmnaylor/terraform-okta-test/pulls/3/merge \
-        -f commit_title='Expand enum' \
-        -f commit_message='Add a new value to the merge_method enum' 
+        /repos/laurenmnaylor/terraform-okta-test/pulls/3/reviews \
+        -f event='APPROVE' \
