--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,11 +43,11 @@ jobs:
     - id: automerge
       name: automerge
       env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.AUTO_APPROVE_TOKEN }}
       run: |
         gh api \
         --method POST \
         -H "Accept: application/vnd.github+json" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
-        /repos/laurenmnaylor/terraform-okta-test/pulls/3/reviews \
+        /repos/laurenmnaylor/terraform-okta-test/pulls/14/reviews \
         -f event='APPROVE' \
