--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
     - id: automerge
       name: automerge
       env:
-          GH_TOKEN: ${{ secrets.AUTO_APPROVE_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
       run: |
         gh api \
         --method POST \
