--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -17,14 +17,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          fetch-depth: ${{ github.event.pull_request.commits }}
       - name: Get changed files
         id: changes
         # Set outputs using the command.
         run: |
           echo "v=${{ github.event.pull_request.commits }}"
           echo $v
-          echo "all=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }})" >> $GITHUB_OUTPUT
+          echo "all=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }})" >> $GITHUB_OUTPUT
           echo "ts=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$)" >> $GITHUB_OUTPUT
           echo $all
           echo $ts
