--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
-          fetch-depth: ${{ github.event.pull_request.commits }}
+          fetch-depth: 0
       - name: Get changed files
         id: changes
         # Set outputs using the command.
