--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -41,5 +41,9 @@ jobs:
     # only run there are changed files
     steps:
       - name: echo changed files
-        run: echo ${{needs.changedfiles.outputs.all}}        
+        run: |
+          echo ${{needs.changedfiles.outputs.all}}
+          for item in ${{needs.changedfiles.outputs.all}}; do
+            echo "$item"
+          done
   
