--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -45,5 +45,6 @@ jobs:
           echo ${{needs.changedfiles.outputs.all}}
           for item in ${{needs.changedfiles.outputs.all}}; do
             echo "$item"
+            grep "$item" ./github/CODEOWNERS-custom
           done
   
