--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -49,6 +49,6 @@ jobs:
           echo ${{needs.changedfiles.outputs.all}}
           for item in ${{needs.changedfiles.outputs.all}}; do
             echo "$item"
-            grep "$item" .github/CODEOWNERS-custom
+            grep $item .github/CODEOWNERS-custom
           done
   
