--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -25,13 +25,15 @@ jobs:
           echo "v=${{ github.event.pull_request.commits }}"
           echo $v
           git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }}
-          #echo "all=$((git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }}) | xargs)" >> $GITHUB_OUTPUT
-          echo "all=$(cat .github/CODEOWNERS-custom)" >> $GITHUB_OUTPUT
+          echo "all=$((git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }}) | xargs)" >> $GITHUB_OUTPUT
+          #echo "all=$(cat .github/CODEOWNERS-custom)" >> $GITHUB_OUTPUT
           echo "ts=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$)" >> $GITHUB_OUTPUT
           echo $all
           echo $ts
-          cat .github/CODEOWNERS-custom
-          grep "spa" .github/CODEOWNERS-custom
+          cat .github/CODEOWNERS-custom | while read line
+          do
+            echo "$line"
+          done
 
   lint:
     runs-on: ubuntu-latest
