--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -30,9 +30,10 @@ jobs:
           echo "ts=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$)" >> $GITHUB_OUTPUT
           #echo $all
           echo $ts
+          all=""
           cat .github/CODEOWNERS-custom | while read line
           do
-            echo "all+=$line" >> $GITHUB_OUTPUT
+            echo "all=$($all$line\n)" >> $GITHUB_OUTPUT
           done
 
   lint:
@@ -45,8 +46,6 @@ jobs:
         uses: actions/checkout@v2
       - name: echo changed files
         run: |
-          pwd
-          ls
           echo ${{needs.changedfiles.outputs.all}}
           for item in ${{needs.changedfiles.outputs.all}}; do
             echo "$item"
