--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           echo "v=${{ github.event.pull_request.commits }}"
           echo $v
-          git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }}
+          diffs=git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }}
           echo "all=$((git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }}) | xargs)" >> $GITHUB_OUTPUT
           #echo "all=$(cat .github/CODEOWNERS-custom)" >> $GITHUB_OUTPUT
           #echo $all
@@ -33,7 +33,7 @@ jobs:
             echo $line >> tmp.txt
           done
           cat tmp.txt
-          for item in $all; do
+          for item in $diffs; do
             echo $item
           done
           rm tmp.txt
