--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -1,7 +1,9 @@
 name: 'Pull Request'
 
 on:
-  pull_request
+  pull_request:
+  pull_request_review:
+    types: [submitted]
 
 permissions: write-all
 
