--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -27,8 +27,6 @@ jobs:
         run: |
           echo "v=${{ github.event.pull_request.number }}"
           echo $v
-          echo "w=${{ github.event.pull_request_review.pull_request.number }}"
-          echo $w
           diffs=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }})
           echo "all=$((git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }}) | xargs)" >> $GITHUB_OUTPUT
           #echo "all=$(cat .github/CODEOWNERS-custom)" >> $GITHUB_OUTPUT
@@ -43,6 +41,11 @@ jobs:
             echo $item
           done
           rm tmp.txt
+          gh api \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews
+          
 
   lint:
     runs-on: ubuntu-latest
