--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -44,10 +44,8 @@ jobs:
           gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/laurenmnaylor/terraform-okta-test/pulls/80/reviews
-         
+            /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews
           
-
   lint:
     runs-on: ubuntu-latest
     # require the first job to have ran
@@ -62,4 +60,3 @@ jobs:
           for item in ${{needs.changedfiles.outputs.all}}; do
             echo "$item"
           done
-  
