--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -41,11 +41,13 @@ jobs:
             echo $item
           done
           rm tmp.txt
-          gh api \
+          reviews=$(gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews\
-            -q '.[].user.login,.[].status'
+            /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews\)
+          echo $reviews
+          echo $reviews -q '.[].user.login'
+          echo $reviews -q '.[].status'
           
   lint:
     runs-on: ubuntu-latest
