--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -41,10 +41,10 @@ jobs:
             echo $item
           done
           rm tmp.txt
-          reviews=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews -q)
+          reviews=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews)
           echo $reviews
-          echo $($reviews -q '.[].user.login')
-          echo $($reviews -q '.[].status')
+          echo jq $reviews '.[].user.login'
+          echo jq $reviews '.[].status'
           
   lint:
     runs-on: ubuntu-latest
