--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -43,7 +43,7 @@ jobs:
           rm tmp.txt
           reviews=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews)
           echo $reviews
-          echo $(jq -n --argjson data "$reviews" 'data.[].user.login')
+          echo "$reviews" | jq '.[].user.login'
          
           
   lint:
