--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -44,7 +44,7 @@ jobs:
           reviews=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews)
           echo $reviews
           echo "$reviews" | jq '.[].user.login'
-          echo "$reviews" | jq '.[].status'
+          echo "$reviews" | jq '.[].state'
          
           
   lint:
