--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -37,14 +37,19 @@ jobs:
             echo $line >> tmp.txt
           done
           cat tmp.txt
+          
+          reviews=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews)
+          echo $reviews
+          echo "$reviews" | jq 'select(.state|equals("APPROVED"))'
+          echo "users=$($reviews | jq '.[].user.login')"
+          echo "states=$($reviews | jq '.[].state')"
+          echo $users
+          echo $states
+
           for item in $diffs; do
             echo $item
           done
           rm tmp.txt
-          reviews=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews)
-          echo $reviews
-          echo "$reviews" | jq '.[].user.login'
-          echo "$reviews" | jq '.[].state'
          
           
   lint:
