--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -45,6 +45,10 @@ jobs:
           reviews=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews)
           echo "$reviews"
           echo "$reviews" | jq 'map(select(.state=="APPROVED")) | .[].user.login'
+
+          echo "$reviews" | jq 'sort_by(.user.login, submitted_at)'
+          echo "$reviews" | jq 'sort_by(.user.login, submitted_at) | unique_by(.user.login)'
+          echo "$reviews" | jq 'sort_by(.user.login, submitted_at) | unique_by(.user.login) | map(select(.state=="APPROVED")) | .[].user.login'
  
           
   lint:
