--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -46,9 +46,9 @@ jobs:
           echo "$reviews"
           echo "$reviews" | jq 'map(select(.state=="APPROVED")) | .[].user.login'
 
-          echo "$reviews" | jq 'sort_by(.user.login, submitted_at)'
-          echo "$reviews" | jq 'sort_by(.user.login, submitted_at) | unique_by(.user.login)'
-          echo "$reviews" | jq 'sort_by(.user.login, submitted_at) | unique_by(.user.login) | map(select(.state=="APPROVED")) | .[].user.login'
+          echo "$reviews" | jq 'sort_by(.user.login, .submitted_at)'
+          echo "$reviews" | jq 'sort_by(.user.login, .submitted_at) | unique_by(.user.login)'
+          echo "$reviews" | jq 'sort_by(.user.login, .submitted_at) | unique_by(.user.login) | map(select(.state=="APPROVED")) | .[].user.login'
  
           
   lint:
