--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -37,19 +37,16 @@ jobs:
             echo $line >> tmp.txt
           done
           cat tmp.txt
-          for item in $diffs; do
-            echo $item
-          done
-          rm tmp.txt
+         
           
           reviews=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews)
-          echo "$reviews"
-          echo "$reviews" | jq 'map(select(.state=="APPROVED")) | .[].user.login'
-
-          echo "$reviews" | jq 'sort_by(.user.login, .submitted_at) | reverse'
-          echo "$reviews" | jq 'sort_by(.user.login, .submitted_at) | reverse | unique_by(.user.login)'
           echo "$reviews" | jq 'sort_by(.user.login, .submitted_at) | reverse | unique_by(.user.login) | map(select(.state=="APPROVED")) | .[].user.login'
- 
+          
+          for item in $diffs; do
+            echo $item
+            grep $item tmp.txt
+          done
+          rm tmp.txt
           
   lint:
     runs-on: ubuntu-latest
