--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -49,6 +49,7 @@ jobs:
             echo $item
             grep $item tmp.txt
             grep -o "@\S*" tmp.txt
+            grep $item tmp.txt | grep -o "@\S*"
           done
           rm tmp.txt
           
