--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -42,7 +42,7 @@ jobs:
           cat tmp.txt
 
           echo "GREPPING"
-          grep -f diffs.txt tmp.txt
+          grep -f diffs.txt tmp.txt | grep -o "@\S*"
           echo "DONE GREPPING"
           
           reviews=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews)
