--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -41,20 +41,18 @@ jobs:
           done
           cat tmp.txt
 
-          echo "GREPPING"
-          grep -f diffs.txt tmp.txt | grep -o "@\S*"
-          echo "DONE GREPPING"
+
+          grep -f diffs.txt tmp.txt | grep -o "@\S*" >> required_reviewers.txt
+
+        
           
           reviews=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews)
           echo "$reviews" | jq 'sort_by(.user.login, .submitted_at) | reverse | unique_by(.user.login) | map(select(.state=="APPROVED")) | .[].user.login'
-
-          reviewers=$("$reviews" | jq 'sort_by(.user.login, .submitted_at) | reverse | unique_by(.user.login) | map(select(.state=="APPROVED")) | .[].user.login')
-          echo $reviewers
+          "$reviews" | jq 'sort_by(.user.login, .submitted_at) | reverse | unique_by(.user.login) | map(select(.state=="APPROVED")) | .[].user.login' >> approvers.txt
+          echo "APPROVERS"
+          cat approvers.txt
           
-          for item in $diffs; do
-            echo $item
-            grep $item tmp.txt | grep -o "@\S*"
-          done
+          
           rm tmp.txt
           
   lint:
