--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -25,11 +25,11 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # Set outputs using the command.
         run: |
-          echo "v=${{ github.event.pull_request.number }}"
-          echo $v
+         
           diffs=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }})
           git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} >> diffs.txt
-         
+
+          echo "DIFFS.TXT"
           cat diffs.txt
        
           echo "all=$((git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }}) | xargs)" >> $GITHUB_OUTPUT
@@ -39,19 +39,26 @@ jobs:
           do
             echo $line >> tmp.txt
           done
+          echo "TMP.TXT"
           cat tmp.txt
 
 
           grep -f diffs.txt tmp.txt | grep -o "@\S*" >> required_reviewers.txt
 
+          echo "REQUIRED_REVIEWERS.TXT"  
+          cat required_reviewers.txt
         
           
           reviews=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/laurenmnaylor/terraform-okta-test/pulls/${{ github.event.pull_request.number }}/reviews)
           echo "$reviews" | jq 'sort_by(.user.login, .submitted_at) | reverse | unique_by(.user.login) | map(select(.state=="APPROVED")) | .[].user.login'
           echo "$reviews" | jq 'sort_by(.user.login, .submitted_at) | reverse | unique_by(.user.login) | map(select(.state=="APPROVED")) | .[].user.login' >> approvers.txt
-         
+
+          echo "APPROVERS.TXT"
+          cat approvers.txt
+
+          
           echo "RUNNING COMM"
-          comm -13 <(sort -u approvers.txt) <(sort -u required_reviewers.txt)
+          comm <(sort -u approvers.txt) <(sort -u required_reviewers.txt)
           
           rm tmp.txt
           
