--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -56,12 +56,10 @@ jobs:
           echo "APPROVERS.TXT"
           cat approvers.txt
 
-          echo "SORTED REQUIRED_REVIEWERS.TXT"
-          cat (sort -u required_reviewers.txt)
 
           
           echo "RUNNING COMM"
-          comm <(sort -u approvers.txt) <(sort -u required_reviewers.txt)
+          comm (sort -u approvers.txt) (sort -u required_reviewers.txt)
           
           rm tmp.txt
           
