--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -61,8 +61,22 @@ jobs:
           echo "RUNNING COMM"
           comm -13 <(sort -u approvers.txt) <(sort -u required_reviewers.txt)
 
-          teams=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" orgs/Eaton-Vance-Corp/teams/aws-iam-admins/members)
-          echo "$teams"
+          #teams=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" orgs/Eaton-Vance-Corp/teams/aws-iam-admins/members)
+          #echo "$teams"
+
+          gh api graphql -f query='query GetTeamMembers {
+            organization(login: "Eaton-Vance-Corp") {
+            teams(first: 100, userLogins: ["ccipolla"]) {
+            totalCount
+              edges {
+                node {
+                  name
+                  description
+                }
+              }
+            }
+          }
+          }
           rm tmp.txt
           
   lint:
