--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,8 +23,16 @@ jobs:
         run: |
           
           
-          gh api \
-          -H "Accept: application/vnd.github+json" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          /orgs/Eaton-Vance-Corp/teams
-          
+          gh api graphql -f query='query GetTeamMembers {
+            organization(login: "Eaton-Vance-Corp") {
+            teams(first: 100, userLogins: ["ccipolla"]) {
+            totalCount
+              edges {
+                node {
+                  name
+                  description
+                }
+              }
+            }
+          }
+          }'
