--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,9 +30,8 @@ jobs:
               edges {
                 node {
                   name
-                  description
                 }
               }
             }
           }
-          }'
+          }' | jq 'data.organization.teams.edges[].node.name'
