--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,4 +34,4 @@ jobs:
               }
             }
           }
-          }' | jq 'data.organization.teams.edges[].node.name'
+          }' | jq '.data.organization.teams.edges[].node.name'
