--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,16 @@ jobs:
           
           gh api graphql -f query='query GetTeamMembers {
             organization(login: "Eaton-Vance-Corp") {
-            teams(first: 100, userLogins: ["ccipolla"])
+            teams(first: 100, userLogins: ["ccipolla"]) {
+            totalCount
+              edges {
+                node {
+                  name
+                  description
+                  slug
+                }
+              }
+            }
           }
-          }' 
+          }'
           #| jq '.data.organization.teams.edges[].node.name'
