--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
           
           gh api graphql -f query='query GetTeamMembers {
             organization(login: "Eaton-Vance-Corp") {
-            teams(first: 100, userLogins: ["ccipolla"]) {
+            teams(first: 100, userLogins: ["lmnaylor"]) {
             totalCount
               edges {
                 node {
