--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,4 +34,5 @@ jobs:
               }
             }
           }
-          }' | jq '.data.organization.teams.edges[].node.slug'
+          }' 
+          #| jq '.data.organization.teams.edges[].node.slug'
