--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,17 @@ jobs:
           
           gh api graphql -f query='query GetTeamMembers {
             organization(login: "Eaton-Vance-Corp") {
-            teams(first: 100, userLogins: ["laurenmnaylor","tjzwieg"]) {
+            teams(first: 100, userLogins: ["laurenmnaylor"]) {
+            totalCount
+              edges {
+                node {
+                  slug
+                }
+              }
+            }
+          }
+          organization(login: "Eaton-Vance-Corp") {
+            teams(first: 100, userLogins: ["tjzwieg"]) {
             totalCount
               edges {
                 node {
