--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,9 +31,10 @@ jobs:
 
           for $approver in approvers.txt 
           do
+            echo "$approver"
             gh api graphql -f query='query GetTeamMembers {
               organization(login: "Eaton-Vance-Corp") {
-              teams(first: 100, userLogins: ["$approver"]) {
+              teams(first: 100, userLogins: [$approver]) {
                 totalCount
                   edges {
                     node {
