--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,12 +29,14 @@ jobs:
           echo "laurenmnaylor" >> required_reviewers.txt
           echo "okta" >> required_reviewers.txt
 
-          for $approver in approvers.txt 
+          
+
+          cat approvers.txt | while read line
           do
-            echo "$approver"
+            echo $line
             gh api graphql -f query='query GetTeamMembers {
               organization(login: "Eaton-Vance-Corp") {
-              teams(first: 100, userLogins: [$approver]) {
+              teams(first: 100, userLogins: [$line]) {
                 totalCount
                   edges {
                     node {
