--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,7 @@ jobs:
           
           echo "laurenmnaylor" >> approvers.txt
           echo "tjzwieg" >> approvers.txt
-          cat approvers.txt
+         
 
           echo "laurenmnaylor" >> required_reviewers.txt
           echo "okta" >> required_reviewers.txt
@@ -33,7 +33,7 @@ jobs:
 
           cat approvers.txt | while read line
           do
-            echo $line
+         
             gh api graphql -f query='query GetTeamMembers {
               organization(login: "Eaton-Vance-Corp") {
               teams(first: 100, userLogins: ["$line"]) {
@@ -46,7 +46,7 @@ jobs:
                 }
               }
          
-              }' | jq '.data.organization.teams.edges[].node.slug' >> required_reviewers.txt
+              }' | jq '.data.organization.teams.edges[].node.slug' > required_reviewers.txt
 
           done
 
