--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -10,6 +10,8 @@ permissions: write-all
 jobs:
   getMainCodeowners:
     runs-on: ubuntu-latest
+    outputs:
+      rrs: ${{ steps.rr.outputs.rrs}}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -22,10 +24,11 @@ jobs:
           do
             echo $line >> tmp.txt
           done
-          echo "TMP.TXT FROM MAIN"
-          cat tmp.txt
+          echo "rrs=$(cat tmp.txt)" >> $GITHUB_OUTPUT
+          
   changedfiles:
     runs-on: ubuntu-latest
+    needs: getMainCodeowners
     # Map a step output to a job output
     outputs:
       all: ${{ steps.changes.outputs.all}}
@@ -41,8 +44,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # Set outputs using the command.
         run: |
-
-          
+          echo "NEEDS"
+          echo ${{needs.getMainCodeowners.outputs.rrs}}
          
           diffs=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }})
           git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} >> diffs.txt
